--- a/index.html
+++ b/index.html
@@ -3,36 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Stylesheet to connect css spreadsheet-->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
     <title>About Me</title>
 
-    <!-- Beginning of navigation bar-->
-<div class="wrapper">
+    <!-- Beginning of header-->
     <header>
     <div class="name"> <h3>Maria Gordon</h3>
     </div>
-        <!-- Nav bar to connect pages-->
+
+        <!-- Header codes to connect pages-->
         <div class="righty">  
-        <nav>
-        <ul>
-            <li><a href="#">About  <span>|</span>  </a></li>
-            <li><a href="#"> Portfolio <span>|</span>  </a></li>
-            <li><a href="#"> Contact</a></li>
-        </ul>
-    </nav>
+            <a href="index.html">About  <span>|</span>  </a>
+            <a href="portfolio.html"> Portfolio <span>|</span>  </a>
+            <a href="contact.html"> Contact</a>
     </div>
-</div>
-</header>
+    </header>
 </head>
 <body>
     <main>
-        <div class="middle">
     <!-- About me Header-->
-    <h1 id="about">About Me</h1>
+    <h1>About Me</h1>
     <img src="assets/images/picture.jpg" alt="Picture of me">
     <!-- Some info. about me and my life-->
-    <p>I'm Maria.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <p>I'm Maria. I am a mom of two. I have a husband who I think is the most amazing guy in the world. I really got that lucky. He has been my rock throughout this process. I took all of my prereqs in nursing. I stopped, had my son. By the time I thought about going back for nursing, a lot of my prereqs expired. Plus I wasn't thrilled with the idea of 4 years of school, especially with having a family. My husband always said, if he could go back to school it would be for computers. He being the guy who started in nursing and ended with his major in dietetics. Now he sells insurance. He always says a degree is just a piece of paper. </p>
+    <p> I agree with that to some extent. I do wish earlier in life I had gone to school. But I am grateful I skipped out of wracking up a ton of debt. I thought later in life I would possibly be going to college with my kids. Then that thought terrified me. I decided to research the types of computer jobs. Types of schooling for computers. Computer science degree's, basically anything under the sun with the word computer in it. I stumbled onto coding. I was shocked finding out you didn't need a degree in this field. Amazed at the salary of a web-developer. I was <em>shook.</em> I tried a free coding Bootcamp online. I knew from there that this was for me. </p>
 </div>
 </main>
 </body>
