--- a/portfolio.html
+++ b/portfolio.html
@@ -5,22 +5,19 @@
 
     <title>Portfolio</title>
         <!-- The css connecting stylesheet-->
-        <link rel="stylesheet" href="assets/css/portfolio.css">
+         <link rel="stylesheet" href="assets/css/portfolio.css"> 
+         <link rel="stylesheet" href="assets/css/generalized.css"> 
+        <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
         <!-- The name on the Navbar -->
         <header>
             <div class="name"><h3> Maria Gordon</h3>
             </div>
                 <!-- Navbar to connect pages-->
                 <div class="righty">  
-                <nav>
-                <ul>
-                    <li><a href="#">About  <span>|</span> </a></li>
-                    <li><a href="#"> Portfolio <span>|</span></a></li>
-                    <li><a href="#"> Contact</a></li>
-                </ul>
-            </nav>
+                    <a href="index.html">About  <span>|</span> </a>
+                    <a href="portfolio.html"> Portfolio <span>|</span></a>
+                    <a href="contact.html"> Contact</a>
             </div>
-        </div>
         </header>
 </head>
 <body>
@@ -28,21 +25,21 @@
 
         <h1>Portfolio</h1>
         <div class="container">
-                <div class="column">
-                  <img src="assets/images/placeholder_2.jpeg" alt="2" style="width:175px; height:125px;">
+                <div class="picture1">
+                  <img src="assets/images/placeholder_2.jpeg" alt="2" style="width:175px; height:135px;">
                   <div class="top-left">
                     <p>Hangman</p>
 
                     </div>
                 </div>
-                <div class="column">
-                  <img src="assets/images/placeholder_3.jpeg" alt="3" style="width:175px; height:125px;">
+                <div class="picture2">
+                  <img src="assets/images/placeholder_3.jpeg" alt="3" style="width:175px; height:135px;">
                   <div class="top-right">
                     <p>RPG Game</p>
                   </div>
                 </div>
-                <div class="column">
-                  <img src="assets/images/placeholder_1.jpeg" alt="1" style="width:175px; height:125px;">
+                <div class="picture3">
+                  <img src="assets/images/placeholder_1.jpeg" alt="1" style="width:175px; height:135px;">
                   <div class="middle-left">
                    <p> Trivia Game</p>
 
@@ -50,15 +47,15 @@
 
                   </div>
                 </div>
-                    <div class="column">
-                      <img src="assets/images/placeholder_5.jpeg" alt="5" style="width:175px; height:125px;">
+                    <div class="picture5">
+                      <img src="assets/images/placeholder_5.jpeg" alt="5" style="width:175px; height:135px;">
                       <div class="middle-right">
                           <p> Rutgers Info Widget</p>
 
                       </div>
                     </div>
-                    <div class="column">
-                      <img src="assets/images/placeholder_4.jpeg" alt="4" style="width:175px; height:125px;">
+                    <div class="picture4">
+                      <img src="assets/images/placeholder_4.jpeg" alt="4" style="width:175px; height:135px;">
                       <div class="bottom-left">
                         <p>Rock Paper Scissors</p>
 
